@@ -198,6 +198,22 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
+name|protocol
+operator|.
+name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
 name|server
 operator|.
 name|blockmanagement
@@ -307,7 +323,7 @@ specifier|private
 name|long
 name|softLimit
 init|=
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_SOFTLIMIT_PERIOD
 decl_stmt|;
@@ -316,7 +332,7 @@ specifier|private
 name|long
 name|hardLimit
 init|=
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_HARDLIMIT_PERIOD
 decl_stmt|;
