@@ -264,6 +264,22 @@ name|hdfs
 operator|.
 name|protocol
 operator|.
+name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
 name|LocatedBlocks
 import|;
 end_import
@@ -1963,11 +1979,11 @@ name|cluster
 operator|.
 name|setLeasePeriod
 argument_list|(
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_SOFTLIMIT_PERIOD
 argument_list|,
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_HARDLIMIT_PERIOD
 argument_list|)
