@@ -459,6 +459,22 @@ operator|.
 name|protocol
 operator|.
 name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|HdfsConstants
 operator|.
 name|SafeModeAction
 import|;
@@ -4414,11 +4430,11 @@ argument_list|)
 operator|.
 name|setLeasePeriod
 argument_list|(
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_SOFTLIMIT_PERIOD
 argument_list|,
-name|HdfsServerConstants
+name|HdfsConstants
 operator|.
 name|LEASE_HARDLIMIT_PERIOD
 argument_list|)
