@@ -959,6 +959,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-7529. Consolidate encryption zone related implementation into a single
     class. (Rakesh R via wheat9)
 
+    HDFS-9134. Move LEASE_{SOFTLIMIT,HARDLIMIT}_PERIOD constants from
+    HdfsServerConstants to HdfsConstants. (Mingliang Liu via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
